--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://hmdyt.github.io/aboutme
+baseURL: https://hmdyt.github.io/
 languageCode: ja
 title: Hamada Yuto
 theme: PaperMod
@@ -16,12 +16,12 @@ params:
     enabled: true
     title: 濱田悠斗
     subtitle: 神戸大学大学院 理学研究科 物理学専攻 M1
-    imageUrl: /img/profile/myface.png
+    imageUrl: img/profile/myface.png
     buttons:
       - name: つくったもの
-        url: "/product"
+        url: "product"
       - name: 学会とか
-        url: "/conference"
+        url: "conference"
 
   socialIcons: # optional
       - name: GitHub
